# OntologyMaker

./: .gitignore  Cargo.toml  Dockerfile  README.md  demo.tape
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude-flow/workflows/: rust-conversion.yaml
crates/op-cli/: Cargo.toml
crates/op-cli/src/: builder.rs  main.rs
crates/op-core/: Cargo.toml
crates/op-core/src/: config.rs  credentials.rs  error.rs  lib.rs  settings.rs  types.rs
crates/op-engine/: Cargo.toml
crates/op-engine/src/: condensation.rs  context.rs  dispatch.rs  engine.rs  judge.rs  lib.rs  prompts.rs
crates/op-model/: Cargo.toml
crates/op-model/src/: accumulator.rs  anthropic.rs  echo.rs  http.rs  lib.rs  listing.rs  openai.rs  scripted.rs  sse.rs  traits.rs
crates/op-runtime/: Cargo.toml
crates/op-runtime/src/: lib.rs  patching.rs  replay_log.rs  session_runtime.rs  session_store.rs  wiki.rs
crates/op-scripts/: Cargo.toml
crates/op-scripts/src/: build_findings_json.rs  cross_link_analysis.rs  entity_resolution.rs  fetch_census_acs.rs  fetch_epa_echo.rs  fetch_fdic.rs  fetch_fec.rs  fetch_icij_leaks.rs  fetch_ofac_sdn.rs  fetch_osha.rs  fetch_propublica_990.rs  fetch_sam_gov.rs  fetch_sec_edgar.rs  fetch_senate_lobbying.rs  fetch_usaspending.rs  main.rs  timing_analysis.rs
crates/op-tools/: Cargo.toml
crates/op-tools/src/: defs.rs  file_ops.rs  lib.rs  patch.rs  policy.rs  search.rs  shell.rs  web.rs  workspace.rs
crates/op-tui/: Cargo.toml
crates/op-tui/src/: activity.rs  app.rs  commands.rs  demo.rs  lib.rs  render.rs  repl.rs  splash.rs  theme.rs
docs/: AFD.md  DDD.md  PRD.md
