[workspace]
resolver = "2"
members = [
    "crates/op-core",
    "crates/op-model",
    "crates/op-tools",
    "crates/op-engine",
    "crates/op-runtime",
    "crates/op-tui",
    "crates/op-scripts",
    "crates/op-cli",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
base64 = "0.22"
crc32fast = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
csv = "1"
async-trait = "0.1"
futures = "0.3"
tokio-util = "0.7"
bytes = "1"
parking_lot = "0.12"

[profile.release]
lto = true
codegen-units = 1
strip = true
