[package]
name = "op-scripts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openplanter-scripts"
path = "src/main.rs"

[dependencies]
op-core = { path = "../op-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
csv = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
