[package]
name = "op-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
op-core = { path = "../op-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
crc32fast = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
